Interested parties update, appeal documents

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -122,13 +122,28 @@
         Find an appeal
       </h3>
 
-      <p class="govuk-body">
-        Design work in progress from May 2022
-      </p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="interested/find-appeal/v5/guidance">Guidance: Find and comment on an appeal</a>
+        </li>
+        <li>
+          <a href="interested/find-appeal/v5/appeal-search-address">Find an appeal</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Appeals
+      </h3>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v5/guidance">Find an appeal</a>
+          <a href="interested/find-appeal/v5/appeal-details?status=open&appeal=1&appealCode=012726">Appeal open for comments</a>
+        </li>
+        <li>
+          <a href="interested/find-appeal/v5/appeal-details?status=closed&appeal=1&appealCode=011362">Appeal closed for comments</a>
+        </li>
+        <li>
+          <a href="interested/find-appeal/v5/appeal-details?status=completed&appeal=1&appealCode=010234">Decided appeal</a>
         </li>
       </ul>
 
