--- a/app/views/index.html
+++ b/app/views/index.html
@@ -124,7 +124,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="interested/find-appeal/v5/guidance">Guidance: Find and comment on an appeal</a>
+          <a href="interested/find-appeal/v5/guidance">Guidance: Comment on a planning appeal</a>
         </li>
         <li>
           <a href="interested/find-appeal/v5/appeal-search-address">Find an appeal</a>
@@ -154,7 +154,7 @@
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
-          <a href="interested/find-appeal/v5/householder-appeal-first-notice-letter">Notice of an appeal from LPA</a>
+          <a href="interested/find-appeal/v5/appeal-notice-email-full">Notice of an appeal from LPA</a>
         </li>
         <li>
           <a href="interested/comment/v6/your-name">Comment on an appeal</a>
@@ -180,7 +180,7 @@
           }
         },
         {
-          label: 'Find and comment on an appeal',
+          label: 'Comment on a planning appeal',
           id: 'comment',
           panel: {
             html: commentHTML
