--- a/app/views/interested/comment/v6/add-comments.html
+++ b/app/views/interested/comment/v6/add-comments.html
@@ -36,12 +36,12 @@
       <form method="post">
 
         <p>
-          Your comments should be…
+          Your comments should be about the appeal only and should not repeat comments made on the application.
         </p>
 
-        <p>
+        <!-- <p>
           If you want to add documents to support your comments, for example photographs, you can upload them in the next step.
-        </p>
+        </p> -->
 
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           Sensitive information
