--- a/app/views/interested/find-appeal/v5/appeal-search-address.html
+++ b/app/views/interested/find-appeal/v5/appeal-search-address.html
@@ -25,6 +25,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <h1 class="govuk-heading-l">
+      Search for a planning appeal
+    </h1>
+
     <!-- tabs -->
     <div class="govuk-tabs" data-module="govuk-tabs">
       <h2 class="govuk-tabs__title">
@@ -48,8 +52,8 @@
 
           <div class="govuk-form-group">
 
-            <label class="govuk-label govuk-label--l" for="postcode">
-              Search with a postcode
+            <label class="govuk-label govuk-label--m" for="postcode">
+              Enter the postcode
             </label>
 
             <p class="govuk-hint">
@@ -76,8 +80,8 @@
 
           <div class="govuk-form-group">
 
-            <label class="govuk-label govuk-label--l" for="postcode">
-              Search with a grid reference
+            <label class="govuk-label govuk-label--m" for="postcode">
+              Enter the grid reference
             </label>
 
             <p class="govuk-hint">
@@ -117,7 +121,7 @@
 
     <p class="govuk-body">
       <a href="appeal-search-number?version=">
-        Search with an appeal reference
+        Search with the appeal reference
       </a>
     </p>
 
