--- a/app/views/interested/find-appeal/v5/appeal-search-no-results.html
+++ b/app/views/interested/find-appeal/v5/appeal-search-no-results.html
@@ -38,7 +38,7 @@
         {% if data['postcode'] %}
           No appeals found for {{ data['postcode'] }}. <a href="appeal-search-address?version=" class="govuk-link">Change<span class="govuk-visually-hidden"> search address</span></a>
         {% else %}
-          No appeals found for BS3 3EX.
+          No appeals found for (number or postcode).
         {% endif %}
       </p>
     {% endif %}
