--- a/app/views/interested/find-appeal/v5/appeal-search-number.html
+++ b/app/views/interested/find-appeal/v5/appeal-search-number.html
@@ -1,6 +1,5 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set serviceName = "Find and comment on planning appeals" %}
 {% set title = "Enter the appeal reference" %}
 
 {% set prototypeLinks = [{href: 'appeal-search-no-results', text: 'No results'}] %}
@@ -37,7 +36,7 @@
           </label>
 
           <p class="govuk-body">
-            This can be found on the letter you received from the local planning department.
+            This would have been sent to you by the local planning authority.
           </p>
 
           <p class="govuk-hint">
@@ -50,7 +49,7 @@
 
         <p class="govuk-body">
           <a href="appeal-search-address?version=">
-            I do not have an appeal reference number
+            I do not have an appeal reference
           </a>
         </p>
 
