--- a/app/views/interested/find-appeal/index.html
+++ b/app/views/interested/find-appeal/index.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-pins.html' %}
 
 {% set nav = false %}
-{% set title = 'Find and comment on an appeal' %}
+{% set title = 'Comment on a planning appeal' %}
 
 {% block backLink %}
   {{ govukBackLink({
