--- a/app/views/interested/find-appeal/v5/appeal-details.html
+++ b/app/views/interested/find-appeal/v5/appeal-details.html
@@ -53,7 +53,7 @@
         </section> -->
 
         <p class="govuk-body">
-          <a href="/interested/comment/v6/your-name?checking=">You can comment on this appeal</a> until 11:59pm on 4 May 2022.
+          <a href="/interested/comment/v6/your-name?checking=">Comment on this appeal</a> until 11:59pm on 4 May 2022.
         </p>
 
       {% elif data['status'] == "closed" %}
