--- a/app/views/interested/find-appeal/v5/guidance.html
+++ b/app/views/interested/find-appeal/v5/guidance.html
@@ -105,7 +105,7 @@
       </ul>
 
       <p class="govuk-body">
-        If you want to comment on an appeal, you'll need:
+        If you want to comment on an appeal, you’ll need:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
@@ -115,7 +115,7 @@
         </li>
 
         <li>
-          the 7-digit reference number that can be found on your letter from the local planning department. This can also be found on the local planning department's website
+          the 7-digit appeal reference number that can be found on the email from the local planning department
         </li>
 
         <!-- <li>
@@ -133,7 +133,7 @@
       </p>
 
       <p class="govuk-body">
-        You should avoid including sensitive information (also called special category information) if it's not relevant to the appeal. Any sensitive information you share may be shared publicly if the Planning Inspector agrees that it's relevant to your appeal.
+        You must not include sensitive information (also called special category information) if it’s not relevant to the appeal. If you do include sensitive information we will ask you to remove it.
       </p>
 
       <p>
